fixed css bu g on smaller devices

--- a/TuxTreasure/www/css/index.css
+++ b/TuxTreasure/www/css/index.css
@@ -283,6 +283,4 @@ a {
 .card-manage {
     border: 2px solid var(--secondary-color);
     border-radius: 10px;
-    margin-left: 50px;
-    margin-right: 50px;
 }
